@@ -34,6 +34,10 @@
   <description>A framework for interacting with Kiji Through MapReduce</description>
   <url>http://www.kiji.org</url>
 
+  <properties>
+    <kiji-avro.version>1.1.2-cdh4</kiji-avro.version>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -52,6 +56,31 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <!-- Retrieve distribution-specific dependencies for packaging by dist/ module. -->
+            <id>get-distro-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.kiji.avro</groupId>
+                  <artifactId>kiji-avro</artifactId>
+                  <version>${kiji-avro.version}</version>
+                  <type>jar</type>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -158,7 +187,7 @@
     <dependency>
       <groupId>org.kiji.avro</groupId>
       <artifactId>kiji-avro</artifactId>
-      <version>1.1.1-cdh4</version>
+      <version>${kiji-avro.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
