@@ -32,10 +32,10 @@
 
   <properties>
     <hadoop.version>1.0.3</hadoop.version>
-    <hbase.version>0.92.1</hbase.version>
+    <hbase.version>0.94.7</hbase.version>
     <hbase-maven-plugin.version>1.0.10-hadoop1</hbase-maven-plugin.version>
+    <kiji-avro.version>1.1.2-hdp</kiji-avro.version>
   </properties>
-
 
   <name>KijiMR (Hadoop 1.x)</name>
   <description>A framework for interacting with Kiji Through MapReduce</description>
@@ -59,6 +59,16 @@
 
     <plugins>
       <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <configuration>
+          <!-- Avro string compiled to java.lang.String instead of CharSequence -->
+          <stringType>String</stringType>
+          <sourceDirectory>../kiji-mapreduce/src/main/avro</sourceDirectory>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
@@ -66,6 +76,31 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <!-- Retrieve distribution-specific dependencies for packaging by dist/ module. -->
+            <id>get-distro-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.kiji.avro</groupId>
+                  <artifactId>kiji-avro</artifactId>
+                  <version>${kiji-avro.version}</version>
+                  <type>jar</type>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -122,6 +157,19 @@
       <version>${kiji-schema.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- The dependency on Apache Avro must also be made explicit in this pom. -->
+      <groupId>org.apache.avro</groupId>
+      <artifactId>avro</artifactId>
+      <version>${avro.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <!-- Override kiji-avro dependency with a Hadoop 1.x-specific version. -->
+      <groupId>org.kiji.avro</groupId>
+      <artifactId>kiji-avro</artifactId>
+      <version>${kiji-avro.version}</version>
     </dependency>
     <dependency>
       <groupId>org.kiji.testing</groupId>
