@@ -3,6 +3,8 @@
                               KijiMR Release Notes
 
 Version 1.0.0-rc63
+  * KIJIMR-174. kiji-avro dependency moved to lib/distribution/hadoop*/.
+      This dependency is loaded on a Hadoop distribution-specific basis.
   * KIJIMR-197. Publish sources and javadoc jars via Maven build.
   * KIJIMR-107. Removes the KijiDataRequester interface. KijiGatherer,
       KijiProducer, etc. no longer implement this interface.
